# ChangeLog for www-apps/nanoc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nanoc-3.1.6 (29 Nov 2010)

  29 Nov 2010; Hans de Graaff <graaff@gentoo.org> +nanoc-3.1.6.ebuild,
  +metadata.xml:
  Initial import.
